[package]
name = "docker_rust_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
csv = { version = "1.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.113"
log = { version = "0.4", features = [] }
env_logger = "0.9"
chrono = "0.4.31"
reqwest = { version = "0.11.16", features = ["json"]}
rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
thousands = "0.1.4"